force-app/main/default/objects/Student__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <label>Class</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>