force-app/main/default/objects/Student__c/fields/Class_Teacher__c.field-meta.xml
<CustomField>
    <fullName>Class_Teacher__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Class Teacher</label>
    <referenceTo>Teacher__c</referenceTo>
    <relationshipLabel>Students</relationshipLabel>
    <relationshipName>Students</relationshipName>
    <type>Lookup</type>
</CustomField>