force-app/main/default/objects/Student__c/fields/Class_Teacher_Using_Formula__c.field-meta.xml
<CustomField>
    <fullName>Class_Teacher_Using_Formula__c</fullName>
    <formula>CASE( Class_Teacher__r.Subject__c, &apos;10&apos;, IF( Class_Teacher__r.Subject__c = &apos;English&apos;,  Class_Teacher__r.Name , &apos; &apos;), &apos; &apos;)</formula>
    <label>Class Teacher Using Formula</label>
    <type>Text</type>
</CustomField>