force-app/main/default/objects/Student__c/fields/Email_of_Teacher__c.field-meta.xml
<CustomField>
    <fullName>Email_of_Teacher__c</fullName>
    <label>Email of Teacher</label>
    <type>Email</type>
</CustomField>